tests/try_build/fail/dynamodb_item_missing_sk.stderr
error[E0277]: the trait bound `User: HasConstAttribute<SK>` is not satisfied
  --> tests/try_build/fail/dynamodb_item_missing_sk.rs:13:1
   |
13 | / dynamodb_item! {
14 | |     #[table = PlatformTable]
15 | |     User {
16 | |         #[partition_key]
...  |
22 | | }
   | |_^ unsatisfied trait bound
   |
help: the trait `HasConstAttribute<SK>` is not implemented for `User`
  --> tests/try_build/fail/dynamodb_item_missing_sk.rs:6:1
   |
 6 | pub struct User {
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `HasConstAttribute<A>`:
             `Enrollment` implements `HasConstAttribute<ItemType>`
             `PlatformConfig` implements `HasConstAttribute<ItemType>`
             `PlatformConfig` implements `HasConstAttribute<SK>`
             `PlatformConfig` implements `HasConstAttribute<dynamodb_facade::test_fixtures::PK>`
             `dynamodb_facade::test_fixtures::User` implements `HasConstAttribute<ItemType>`
             `dynamodb_facade::test_fixtures::User` implements `HasConstAttribute<SK>`
   = note: required for `User` to implement `HasAttribute<SK>`
   = note: required for `User` to implement `dynamodb_facade::schema::markers::HasKeyAttributesImpl<test_fixtures::_::__TableKeySchema, CompositeKey>`
   = note: required for `User` to implement `dynamodb_facade::schema::markers::HasKeyAttributes<test_fixtures::_::__TableKeySchema>`
   = note: required for `User` to implement `dynamodb_facade::schema::markers::HasTableKeyAttributes<dynamodb_facade::test_fixtures::PlatformTable>`
   = note: required for `()` to implement `AttributeList<dynamodb_facade::test_fixtures::PlatformTable, User>`
note: required by a bound in `dynamodb_facade::DynamoDBItem::AdditionalAttributes`
  --> src/item/mod.rs
   |
   |     type AdditionalAttributes: AttributeList<TD, Self>;
   |                                ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DynamoDBItem::AdditionalAttributes`
   = note: this error originates in the macro `$crate::attr_list` which comes from the expansion of the macro `dynamodb_item` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `User: dynamodb_facade::schema::markers::HasKeyAttributesImpl<test_fixtures::_::__TableKeySchema, CompositeKey>` is not satisfied
  --> tests/try_build/fail/dynamodb_item_missing_sk.rs:15:5
   |
15 |     User {
   |     ^^^^ unsatisfied trait bound
   |
help: the trait `HasConstAttribute<SK>` is not implemented for `User`
  --> tests/try_build/fail/dynamodb_item_missing_sk.rs:6:1
   |
 6 | pub struct User {
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `HasConstAttribute<A>`:
             `Enrollment` implements `HasConstAttribute<ItemType>`
             `PlatformConfig` implements `HasConstAttribute<ItemType>`
             `PlatformConfig` implements `HasConstAttribute<SK>`
             `PlatformConfig` implements `HasConstAttribute<dynamodb_facade::test_fixtures::PK>`
             `dynamodb_facade::test_fixtures::User` implements `HasConstAttribute<ItemType>`
             `dynamodb_facade::test_fixtures::User` implements `HasConstAttribute<SK>`
   = note: required for `User` to implement `HasAttribute<SK>`
   = note: required for `User` to implement `dynamodb_facade::schema::markers::HasKeyAttributesImpl<test_fixtures::_::__TableKeySchema, CompositeKey>`
   = note: required for `User` to implement `dynamodb_facade::schema::markers::HasKeyAttributes<<dynamodb_facade::test_fixtures::PlatformTable as TableDefinition>::KeySchema>`
   = note: required for `User` to implement `dynamodb_facade::schema::markers::HasTableKeyAttributes<dynamodb_facade::test_fixtures::PlatformTable>`
note: required by a bound in `DynamoDBItem`
  --> src/item/mod.rs
   |
   | pub trait DynamoDBItem<TD: TableDefinition>:
   |           ------------ required by a bound in this trait
   |     Sized + HasTableKeyAttributes<TD> + KeyBuilder<TD>
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DynamoDBItem`
   = note: `DynamoDBItem` is a "sealed trait", because to implement it you also need to implement `dynamodb_facade::schema::markers::HasTableKeyAttributes`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T
